# moleapp-agent-service

./: .env.example  Dockerfile  Dockerfile.ci  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  admin.py  competition.py  dashboard.py  missions.py  positions.py  signals.py
app/config/: __init__.py  settings.py
app/models/: playbook.py
app/services/: circuit_breaker.py  database.py  execution_queue.py  fast_actor.py  mission_exit.py  risk_manager.py  signal_provider.py
app/services/auth/: __init__.py  keycloak.py
app/services/hyperliquid/: __init__.py  agent_approval.py  agent_wallet.py  client.py  rate_limiter.py  ws_cache_bridge.py  ws_feed.py
app/services/llm/: __init__.py  deepseek_client.py  prompts.py  qwen_client.py  router.py
app/services/observability/: __init__.py  langfuse_client.py  prompt_manager.py
app/services/rag/: __init__.py  data_loader.py  faiss_store.py
app/services/vault/: __init__.py  bridge_signer.py  client.py  payout_signer.py
app/services/wallet/: __init__.py  turnkey_bridge.py
app/tasks/: __init__.py  asset_rotation.py  deposit_polling.py  mission_lifecycle.py  monitoring.py  pnl_sync.py  scheduler.py
app/workers/: arq_settings.py  deposit_worker.py  market_data_worker.py  pnl_worker.py
app/workflows/: __init__.py  graph.py  state.py
app/workflows/nodes/: __init__.py  execution.py  market_analysis.py  monitoring.py  user_filter.py
data_pipeline/: __init__.py  builder.py
scripts/: test_mission_lifecycle.py  test_vault_jit.py
